create github pages

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="col-12 col-md-12">
             
             <div class="badge_wrap align-center">
-                <h5 class="badge mbr-bold mbr-fonts-style display-1">Accedi ora al Webinar Gratuito</h5>
+                <h5 class="badge mbr-bold mbr-fonts-style display-1">Accedi ora <br>al Webinar <br>Gratuito</h5>
             </div>
 
             <h4 class="main-title align-center mbr-regular mbr-black mbr-fonts-style display-2">Top companies are using our products</h4>
@@ -419,7 +419,7 @@
                     <h5 class="main-sub-title mbr-fonts-style mb-3 display-2">Accedi ora al Webinar Gratuito</h5>
                 </div>
 
-                <h4 class="mbr-section-title mbr-fonts-style align-center mb-3 display-2"><strong>Our Dedicated Team</strong></h4>
+                <h4 class="mbr-section-title mbr-fonts-style align-center mb-3 display-2"><strong>Alcuni Clienti &amp; Partner</strong></h4>
 
                 <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-5 display-7">Lorem ipsum dolor sit amet,
                     consectetur adipiscing elit. Duis dignissim dolor in nulla ultrices vitae malesuada.</h5>
